used eventlistener/setAttributes to turn start page to display none and quiz page to display grid after clicking button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <section id = "quiz-section">
         <h1>QUESTION GOES HERE</h1>
         <div id = "div-quiz">
-            <button>A</button>
-            <button>B</button>
-            <button>C</button>
+            <button id = "choiceA">A</button>
+            <p>Choice A</p>
+            <button id = "choiceB">B</button>
+            <p>Choice B</p>
+            <button id = "choiceC">C</button>
+            <p>Choice C</p>
         </div>
     </section>
     <section id = "results">
