I've added functions to test if answer is correct and function to display results section when quiz is done

--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
         <button id = "start-button">Start The Quiz</button>
     </section>
     <section id = "quiz-section">
-        <h1>QUESTION GOES HERE</h1>
+        <h1 id = "question-title">QUESTION GOES HERE</h1>
         <div id = "div-quiz">
-            <button id = "choiceA">A</button>
-            <p>Choice A</p>
-            <button id = "choiceB">B</button>
-            <p>Choice B</p>
-            <button id = "choiceC">C</button>
-            <p>Choice C</p>
+            <button id = "buttonA">A</button>
+            <p id = "choiceA">Choice A</p>
+            <button id = "buttonB">B</button>
+            <p id = "choiceB">Choice B</p>
+            <button id = "buttonC">C</button>
+            <p id = "choiceC">Choice C</p>
         </div>
     </section>
     <section id = "results">
         <h1>Here are your results</h1>
+        <p id = "your-results"></p>
+        <form >
+            <input type="put your initials" id = "initials">
+        </form>
         <a href="./highscores.html" target = "_blank"></a>
     </section>
     <script src="./assets/script.js"></script>
