added submission form page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id = "start-button">Start The Quiz</button>
     </section>
     <section id = "quiz-section">
+        <header id = "timer"></header>
         <h1 id = "question-title">QUESTION GOES HERE</h1>
         <div id = "div-quiz">
             <button id = "buttonA">A</button>
@@ -23,10 +24,11 @@
         </div>
     </section>
     <section id = "results">
-        <h1>Here are your results</h1>
+        <h1 id = "points">Here are your results</h1>
         <p id = "your-results"></p>
         <form >
-            <input type="put your initials" id = "initials">
+            <input placeholder = "put your initials here" id = "initials">
+            <button id = "submit-score">Submit Score</button>
         </form>
         <a href="./highscores.html" target = "_blank"></a>
     </section>
