--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body id = "html2">
+
     <script src="./assets/script.js"></script>
 </body>
 </html>
