added a 4th section for the high scores

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>JS Fundamenetals Quiz</title>
 </head>
 <body>
+    <header  >
+        <div id ="topHead">Go To HighScores</div>
+        <div id = "timer">Timer:</div>
+    </header>
     <section id = "start-page">
-        <h1>Welcome to the quix</h1>
+        <h1>Welcome to the quiz</h1>
         <button id = "start-button">Start The Quiz</button>
     </section>
     <section id = "quiz-section">
-        <header id = "timer"></header>
+        
         <h1 id = "question-title">QUESTION GOES HERE</h1>
         <div id = "div-quiz">
             <button id = "buttonA">A</button>
@@ -31,6 +35,10 @@
             <button id = "submit-score">Submit Score</button>
         </form>
         <a href="./highscores.html" target = "_blank"></a>
+    </section>
+    <section id="highscore">
+        <li id = "bolder">INITIALS:</li>
+        <li id = "bolder">SCORE:</li>
     </section>
     <script src="./assets/script.js"></script>
 </body>
