cleaned up code with comments and added a prompt

--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
         <a href="./highscores.html" target = "_blank"></a>
     </section>
     <section id="highscore">
-        <li id = "bolder">INITIALS:</li>
-        <li id = "bolder">SCORE:</li>
+        <div>
+            <button id = "reset-button">RESET SCORES</button>
+        </div>
+        <div id = "finalDiv">
+            <li id = "bolder">INITIALS:</li>
+            <li id = "bolder">SCORE:</li>
+        </div>
+        
     </section>
     <script src="./assets/script.js"></script>
 </body>
