--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="timer">Timer:</div>
     </header>
     <section id="start-page">
-      <h1>Welcome to the quiz</h1>
+      <h1>JavaScript Fundamentals Quiz</h1>
       <button id="start-button">Start The Quiz</button>
     </section>
     <section id="quiz-section">
